--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   background-repeat: no-repeat;
   height: 80vh;
   border-radius: 50px;
-  color: #fff;
+  color: rgb(184, 181, 181);
   cursor: pointer;
   flex: 0.5;
   margin: 10px;
@@ -48,6 +48,7 @@ body {
 
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 0.7s 0.5s ease-in;
 }
 
 @media (max-width: 480px) {
